added reference to adams-core manual regarding Eclipse configuration

--- a/dev_start.html
+++ b/dev_start.html
@@ -167,7 +167,7 @@
                   </div>
                   <div id="collapse-source-4" class="panel-collapse collapse">
                     <div class="panel-body">
-                      <p>You can directly import Maven projects in Eclipse using the <a href="http://eclipse.org/m2e/" target="_blank">m2e</a> plugin.</p>
+                      <p>You can directly import Maven projects in Eclipse using the <a href="http://eclipse.org/m2e/" target="_blank">m2e</a> plugin. See the <em>adams-core</em> manual, section <em>Tools</em>, subsection <em>Eclipse</em> for more details.</p>
                       <p>In order to start the ADAMS user interface, you need to create a Run configuration with the following main class:</p>
                       <p><code>adams.gui.Main</code></p>
                       <p>All example flows use the placeholder <code>${EXAMPLE_FLOWS}</code>, which is relative to the module's path. In order to execute the example flows from module <em>adams-weka</em>, you need to set <em>adams-weka</em> as project in your launcher.</p>
