added author meta-tag; added eResearch 2014 page

--- a/ernz2014.html
+++ b/ernz2014.html
@@ -37,13 +37,17 @@
 
     <div class="container">
       <div class="page-header">
-        <h1>Snapshot</h1>
+        <h1>eResearch 2014</h1>
       </div>
 
-      <p>Snapshots are automatically built once a day, unless there is a test failure that needs addressing.</p>
+      <p>More information coming soon...</p>
 
-      <span id="snapshotimport"></span>
-      <script>$("#snapshotimport").load("snapshots/adams/index.html #index");</script>
+      <p>Links:</p>
+      <ul>
+        <li><a href="http://ernz2014.eresearch.org.nz/" target="_blank">Conference homepage</a></li>
+        <li><a href="http://ernz2014.eresearch.org.nz/sites/default/files/eresearch-nz-2014-programme2.pdf" target="_blank">Conference program</a></li>
+        <li><a href="http://ernz2014-dm.waikato.ac.nz/" target="_blank">Data Mining MOOCs</a></li>
+      </ul>
 
       <div id="footer-simple">
       </div>
