--- a/user_examples.html
+++ b/user_examples.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Peter 'fracpete' Reutemann">
     <link rel="shortcut icon" href="favicon.ico">
 
     <title>ADAMS - The Advanced Data mining And Machine learning System</title>
@@ -640,6 +640,8 @@
           </div>
         </div>
       </div>
+
+      <p><strong>Note:</strong> the videos should only be considered educational, as some of the concepts in ADAMS have changed over time. E.g., <em>global</em> actors are now called <em>callable</em>, since they can appear in different scopes within the flow. Also, <em>SingleFileSupplier</em> and <em>MultiFileSupplier</em> got merged into the <em>FileSupplier</em> actor.</p>
 
       <div id="footer-simple">
       </div>
