--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Peter 'fracpete' Reutemann">
     <link rel="shortcut icon" href="favicon.ico">
 
     <title>ADAMS - The Advanced Data mining And Machine learning System</title>
