--- a/navbar.html
+++ b/navbar.html
@@ -11,6 +11,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="ernz2014.html">eResearch 2014</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Download<b class="caret"></b></a>
               <ul class="dropdown-menu">
