--- a/navbar.html
+++ b/navbar.html
@@ -17,6 +17,7 @@
               <ul class="dropdown-menu">
                 <li><a href="release.html">Release</a></li>
                 <li><a href="snapshot.html">Snapshot</a></li>
+                <!--li><a href="rollyourown.html">&#8220;Roll your own&#8221;</a></li-->
               </ul>
             </li>
             <li class="dropdown">
