--- a/snapshot.html
+++ b/snapshot.html
@@ -43,7 +43,7 @@
       <p>Snapshots are automatically built once a day, unless there is a test failure that needs addressing.</p>
 
       <span id="snapshotimport"></span>
-      <script>$("#snapshotimport").load("snapshots/adams/index.html #index");</script>
+      <script>$("#snapshotimport").load("snapshots/adams/snapshots.html #index");</script>
 
       <div id="footer-simple">
       </div>
