--- a/rollyourown.html
+++ b/rollyourown.html
@@ -16,9 +16,7 @@
 
     <!-- load zip libraries -->
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/zip.js"></script>
-    <script type="text/javascript" src="js/deflate.js"></script>
-    <script type="text/javascript" src="js/inflate.js"></script>
+    <script type="text/javascript" src="js/jquery.base64.min.js"></script>
     <script type="text/javascript">
     </script>
 
@@ -49,26 +47,37 @@
       </div>
 
       <p>This page allows you to generate a custom <a href="http://maven.apache.org/" target="_blank">Maven</a> setup of ADAMS, with the specific version and modules that you select, for generating your own ADAMS distribution.</p>
-      <p>Check out the <em>Get started</em> section for <em>Developers</em> for more information on requirements and compiling ADAMS.</p>
+      <p>Check out the <em><a href="dev_start.html">Get started</a></em> section for <em>Developers</em> for more information on requirements and compiling ADAMS.</p>
 
       <div class="panel-body">
         <form class="form">
+          <div class="row">
+            <h3>Project name</h3>
+            <p><strong>First</strong>, choose a name for your project:</p>
+            <p><input id="project" name="project" type="text" value="MyAdams"/></p>
+          </div>
+
+          <div class="row">
+            <h3>Build environment</h3>
+            <p><strong>Second</strong>, download the <a href="resources/rollyourown/source/src.zip" target="_blank">zip archive</a> containing the skeleton build environment.</p>
+            <p>Unzip it on your machine in the location where you want to build your ADAMS project.</p>
+          </div>
+
           <div class="row">
             <h3>Release</h3>
             <script type="text/javascript">
               // updates the modules selection tag based on selected release
               function update_modules() {
-                release = document.getElementById("release");
-                  if (release.value.length > 0) {
+                var release = document.getElementById("release");
+                if (release.value.length > 0) {
                   $.get('resources/rollyourown/modules/' + release.value + '.txt', function(data) {
                       $('#modules').empty();
                       $('#modules').append('<select id="selmodules" name="modules" multiple="yes" size="10">');
-                      lines = data.split("\n");
+                      var lines = data.split("\n");
                       $.each(lines, function(index, value) {
                         if (value.length > 0) {
                           $('#selmodules').append('<option value="' + value + '">' + value + '</option>');
                         }
-                        //$('#modules').append(value');
                       });
                   }, 'text');
                 }
@@ -76,8 +85,8 @@
               
               // returns all currently selected modules
               function get_modules() {
-                result = new Array();
-                modules = document.getElementById('selmodules');
+                var result = new Array();
+                var modules = document.getElementById('selmodules');
                 if (modules != null) {
                   for (i = 0; i < modules.options.length; i++) {
                     if (modules.options[i].selected) {
@@ -88,34 +97,76 @@
                 return result;
               }
             </script>
-            <p>Select the release that you want to use as basis:</p>
+            <p><strong>Third</strong>, select the release that you want to use as basis:</p>
             <select id="release" name="release" onchange="update_modules();">
               <option value="" selected="yes">Please select</option>
               <script type="text/javascript">
-              releases = ['0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
-              for (i = 0; i < releases.length; i++) {
-                document.write('<option value="' + releases[i] + '">' + releases[i] + "</option>");
-              }
+                var releases = ['0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
+                for (i = 0; i < releases.length; i++) {
+                  document.write('<option value="' + releases[i] + '">' + releases[i] + "</option>");
+                }
               </script>
             </select>
           </div>
 
           <div class="row">
             <h3>Modules</h3>
-            <p>Select the modules to include (<em>adams-core</em> is included automatically):</p>
+            <p><strong>Fourth</strong>, select the modules to include (<em>adams-core</em> is included automatically):</p>
             <span id="modules">
-            <em>[Once you select a release, the list of modules will appear here.]</em>
+            <p><em>[Once you select a release, the list of modules will appear here.]</em></p>
             </span>
           </div>
 
           <div class="row">
-            <p>&nbsp;</p>
+            <h3>Build setup</h3>
+            <p><strong>Fifth</strong>, click on <em>Generate</em> once you are happy with the setup.</p>
             <script type="text/javascript">
-              function generate() {
-                alert("Not yet implemented! Selected modules: " + get_modules());
+              function generate(e) {
+                e.preventDefault();
+                $.get('resources/rollyourown/source/pom.xml', function(data) {
+                  // version
+                  var release = document.getElementById("release");
+                  var result = data.toString();
+                  result = result.replace(/{VERSION}/g, release.value);
+                  // project
+                  var project = document.getElementById("project");
+                  result = result.replace(/{PROJECT}/g, project.value);
+                  // modules
+                  var modules = get_modules();
+                  var dep = "";
+                  for (i = 0; i < modules.length; i++) {
+                    if (modules[i].length > 0) {
+                      dep += "\n";
+                      dep += "    <dependency>\n";
+                      dep += "      <groupId>nz.ac.waikato.cms.adams</groupId>\n";
+                      dep += "      <artifactId>" + modules[i] + "</artifactId>\n";
+                      dep += "      <version>" + release.value + "</version>\n";
+                      dep += "    </dependency>\n";
+                    }
+                  }
+                  result = result.toString().replace(/{MODULES}/g, dep);
+                  var base64 = $.base64.encode(result);
+                  $('#download').empty();
+                  $('#download').append('<p><a href="data:text/octet-stream;base64,' + base64 + '">Download</a></p>');
+
+                }, 'text');
+                return false;
               }
             </script>
-            <input type="submit" value="Generate" onclick="generate();"/>
+            <input id="generate" type="submit" value="Generate"/>
+            <script type="text/javascript">
+              $('#generate').click(function (e) {
+                generate(e);
+              });
+            </script>
+          </div>
+
+          <div class="row">
+            <h3>Download</h3>
+            <p><strong>Sixth</strong>, click on the download link below and save the generated build setup file as <em>pom.xml</em> in the directory where you extracted the build environment to (in the same directory as the <em>LICENSE.txt</em> file).</p>
+            <span id="download">
+            <p><em>[Link will appear once generated]</em></p>
+            </span>
           </div>
         </form>
       </div>
