better text for download link placeholder

--- a/rollyourown.html
+++ b/rollyourown.html
@@ -165,7 +165,7 @@
             <h3>Download</h3>
             <p><strong>Sixth</strong>, click on the download link below and save the generated build setup file as <em>pom.xml</em> in the directory where you extracted the build environment to (in the same directory as the <em>LICENSE.txt</em> file).</p>
             <span id="download">
-            <p><em>[Link will appear once generated]</em></p>
+            <p><em>[Link will appear once a build setup has been generated.]</em></p>
             </span>
           </div>
         </form>
