modified intro slightly

--- a/rollyourown.html
+++ b/rollyourown.html
@@ -47,7 +47,7 @@
       </div>
 
       <p>This page allows you to generate a custom <a href="http://maven.apache.org/" target="_blank">Maven</a> setup of ADAMS, with the specific version and modules that you select, for generating your own ADAMS distribution.</p>
-      <p>Check out the <em><a href="dev_start.html">Get started</a></em> section for <em>Developers</em> for more information on requirements and compiling ADAMS.</p>
+      <p>Check out the <em><a href="dev_start.html">Get started</a></em> section for <em>Developers</em> for more information on requirements and configurations for compiling ADAMS.</p>
 
       <div class="panel-body">
         <form class="form">
