--- a/release.html
+++ b/release.html
@@ -44,34 +44,34 @@
       <a href="http://sf.net/projects/theadamsflow/files/" target="_blank">Sourceforge.net</a>.</p>
 
       <div class="panel-group" id="accordion">
-        <!-- X.Y.Z -->
-        <!--div class="panel panel-default">
+        <!-- 0.4.6 -->
+        <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-X-Y-Z">
-                x.y.z<small> - released 20XX-YY-ZZ</small>
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-6">
+                0.4.6<small> - released 2014-06-23</small>
               </a>
             </h4>
           </div>
-          <div id="collapse-X-Y-Z" class="panel-collapse collapse">
+          <div id="collapse-0-4-6" class="panel-collapse collapse">
             <div class="panel-body">
               <ul>
                 <li><strong>base</strong>
                   <ul>
-                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-bin.zip/download" target="_blank">zip</a></li>
-                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-base-all-X.Y.Z-flows.jar/download" target="_blank">flows</a></li>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-base-all-0.4.6-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-base-all-0.4.6-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-base-all-0.4.6-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-base-all-0.4.6-flows.jar/download" target="_blank">flows</a></li>
                   </ul>
                 </li>
                 <li><strong>base + addons</strong>
                   <ul>
-                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-bin.zip/download" target="_blank">zip</a></li>
-                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/X.Y.Z/adams-addons-all-X.Y.Z-flows.jar/download" target="_blank">flows</a></li>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-addons-all-0.4.6-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-addons-all-0.4.6-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-addons-all-0.4.6-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.6/adams-addons-all-0.4.6-flows.jar/download" target="_blank">flows</a></li>
                   </ul>
                 </li>
               </ul>
             </div>
           </div>
-        </div-->
+        </div>
         <!-- 0.4.5 -->
         <div class="panel panel-default">
           <div class="panel-heading">
