--- a/rollyourown.html
+++ b/rollyourown.html
@@ -101,7 +101,7 @@
             <select id="release" name="release" onchange="update_modules();">
               <option value="" selected="yes">Please select</option>
               <script type="text/javascript">
-                var releases = ['0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
+                var releases = ['0.4.6', '0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
                 for (i = 0; i < releases.length; i++) {
                   document.write('<option value="' + releases[i] + '">' + releases[i] + "</option>");
                 }
