updated ernz2014 program

--- a/ernz2014.html
+++ b/ernz2014.html
@@ -40,14 +40,43 @@
         <h1>eResearch 2014</h1>
       </div>
 
-      <p>More information coming soon...</p>
+      <h2>NZ Data Mining Workshop - Monday 30 June</h2>
+      <p>Below you can find more information on the sessions.</p>
 
-      <p>Links:</p>
       <ul>
         <li><a href="http://ernz2014.eresearch.org.nz/" target="_blank">Conference homepage</a></li>
         <li><a href="http://ernz2014.eresearch.org.nz/sites/default/files/eresearch-nz-2014-programme2.pdf" target="_blank">Conference program</a></li>
         <li><a href="http://ernz2014-dm.waikato.ac.nz/" target="_blank">Data Mining MOOCs</a></li>
       </ul>
+
+      <h3>S.1.02 | 10:30am -12:00pm | Data Mining with WEKA (MOOC)</h3>
+      <p>Attendants will be able to familiarize themselves with Weka, using the highly successful MOOC series "Data Mining with Weka" for self-study (experienced Data Miners will be at hand to answer questions). The MOOCs are available at the following URL (and stay open throughout the course of the conference).</p>
+
+      <h4>Links</h4>
+      <ul>
+        <li><a href="http://ernz2014-dm.waikato.ac.nz/" target="_blank">MOOC homepage</a></li>
+      </ul>
+
+      <h3>S.1.02 | 1:00pm - 3:00pm | WEKA in the ecosystem for scientific computing</h3>
+      <p>This session will demonstrate how to access the WEKA data mining software from Octave/Matlab, R, and Python, and will also consider how some R functionality can be applied from within WEKA. Finally, we will discuss facilities for distributed computation in WEKA.</p>
+
+      <h4>Links</h4>
+      <ul>
+        <li><a href="http://www.cs.waikato.ac.nz/ml/weka/" target="_blank">WEKA homepage</a></li>
+        <li><a href="http://www.cs.waikato.ac.nz/ml/weka/downloading.html" target="_blank">WEKA downloads</a></li>
+      </ul>
+
+      <h3>S.1.02 | 3.15pm - 5.30pm | Scientific workflow management with ADAMS</h3>
+      <p>Workflow systems allow researchers to define and document complex data processing tasks and experiments using a graphical approach. In this session, ADAMS will be used for data mining, data processing and data visualization tasks. We will also show how workflows can be easily extended using R, Jython and Groovy.</p>
+
+      <h4>Software</h4>
+      <ul>
+        <li><a href="ernz2014/adams-base-all-0.4.6-bin.zip" target="_blank">ADAMS 0.4.6</a> (Windows/Linux)</li>
+        <li><a href="ernz2014/adams-base-all-0.4.6-app.zip" target="_blank">ADAMS 0.4.6</a> (Mac)</li>
+      </ul>
+
+      <h4>Datasets</h4>
+      <p>Coming soon...</p>
 
       <div id="footer-simple">
       </div>
