updated Google Analytics

--- a/ga.html
+++ b/ga.html
@@ -5,6 +5,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-52116516-1', 'waikato.ac.nz');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
