--- a/screenshots.html
+++ b/screenshots.html
@@ -128,6 +128,12 @@
         <a href="img/screenshots/timeseries-forecast.png" title="Timeseries - Forecast" data-gallery>
           <img src="img/thumbnails/timeseries-forecast.png" alt="Timeseries - Forecast"/>
         </a>
+        <a href="img/screenshots/4in1-output.png" title="4 in 1 plot" data-gallery>
+          <img src="img/thumbnails/4in1-output.png" alt="4 in 1 plot"/>
+        </a>
+        <a href="img/screenshots/explorerext-workspaces.png" title="Explorer workspaces" data-gallery>
+          <img src="img/thumbnails/explorerext-workspaces.png" alt="Explorer workspaces"/>
+        </a>
         <!--a href="img/screenshots/" title="" data-gallery>
           <img src="img/thumbnails/" alt=""/>
         </a-->
