--- a/rollyourown.html
+++ b/rollyourown.html
@@ -64,13 +64,13 @@
           </div>
 
           <div class="row">
-            <h3>Release</h3>
+            <h3>Version</h3>
             <script type="text/javascript">
-              // updates the modules selection tag based on selected release
+              // updates the modules selection tag based on selected version
               function update_modules() {
-                var release = document.getElementById("release");
-                if (release.value.length > 0) {
-                  $.get('resources/rollyourown/modules/' + release.value + '.txt', function(data) {
+                var version = document.getElementById("version");
+                if (version.value.length > 0) {
+                  $.get('resources/rollyourown/modules/' + version.value + '.txt', function(data) {
                       $('#modules').empty();
                       $('#modules').append('<select id="selmodules" name="modules" multiple="yes" size="10">');
                       var lines = data.split("\n");
@@ -97,13 +97,13 @@
                 return result;
               }
             </script>
-            <p><strong>Third</strong>, select the release that you want to use as basis:</p>
-            <select id="release" name="release" onchange="update_modules();">
+            <p><strong>Third</strong>, select the version that you want to use as basis (<code>-SNAPSHOT</code> is the version under development):</p>
+            <select id="version" name="version" onchange="update_modules();">
               <option value="" selected="yes">Please select</option>
               <script type="text/javascript">
-                var releases = ['0.4.6', '0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
-                for (i = 0; i < releases.length; i++) {
-                  document.write('<option value="' + releases[i] + '">' + releases[i] + "</option>");
+                var versions = ['0.4.7-SNAPSHOT', '0.4.6', '0.4.5', '0.4.4', '0.4.3', '0.4.2', '0.4.1', '0.4.0']
+                for (i = 0; i < versions.length; i++) {
+                  document.write('<option value="' + versions[i] + '">' + versions[i] + "</option>");
                 }
               </script>
             </select>
@@ -113,7 +113,7 @@
             <h3>Modules</h3>
             <p><strong>Fourth</strong>, select the modules to include (<em>adams-core</em> is included automatically):</p>
             <span id="modules">
-            <p><em>[Once you select a release, the list of modules will appear here.]</em></p>
+            <p><em>[Once you select a version, the list of modules will appear here.]</em></p>
             </span>
           </div>
 
@@ -125,9 +125,9 @@
                 e.preventDefault();
                 $.get('resources/rollyourown/source/pom.xml', function(data) {
                   // version
-                  var release = document.getElementById("release");
+                  var version = document.getElementById("version");
                   var result = data.toString();
-                  result = result.replace(/{VERSION}/g, release.value);
+                  result = result.replace(/{VERSION}/g, version.value);
                   // project
                   var project = document.getElementById("project");
                   result = result.replace(/{PROJECT}/g, project.value);
@@ -140,14 +140,14 @@
                       dep += "    <dependency>\n";
                       dep += "      <groupId>nz.ac.waikato.cms.adams</groupId>\n";
                       dep += "      <artifactId>" + modules[i] + "</artifactId>\n";
-                      dep += "      <version>" + release.value + "</version>\n";
+                      dep += "      <version>" + version.value + "</version>\n";
                       dep += "    </dependency>\n";
                     }
                   }
                   result = result.toString().replace(/{MODULES}/g, dep);
                   var base64 = $.base64.encode(result);
                   $('#download').empty();
-                  $('#download').append('<p><a href="data:text/octet-stream;base64,' + base64 + '">Download</a></p>');
+                  $('#download').append('<p><a href="data:text/octet-stream;base64,' + base64 + '">Download &#187;pom.xml&#171;</a></p>');
 
                 }, 'text');
                 return false;
