added Eibe's slides

--- a/ernz2014.html
+++ b/ernz2014.html
@@ -64,6 +64,7 @@
       <ul>
         <li><a href="http://www.cs.waikato.ac.nz/ml/weka/" target="_blank">WEKA homepage</a></li>
         <li><a href="http://www.cs.waikato.ac.nz/ml/weka/downloading.html" target="_blank">WEKA downloads</a></li>
+        <li>Slides [<a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.pdf" target="_blank">pdf</a>, <a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.ppt" target="_blank">ppt</a>]</li>
       </ul>
 
       <h3>S.1.02 | 3.15pm - 5.30pm | Scientific workflow management with ADAMS</h3>
