added tesseract link

--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
                   </tr>
                   <tr>
                     <td>Imaging</td>
-                    <td><a href="http://imagej.nih.gov/ij/" target="_blank">ImageJ</a>, <a href="http://en.wikipedia.org/wiki/Java_Advanced_Imaging" target="_blank">JAI</a>, <a href="" target="_blank">ImageMagick</a>, <a href="http://gnuplot.info/" target="_blank">Gnuplot</a></td>
+                    <td><a href="http://imagej.nih.gov/ij/" target="_blank">ImageJ</a>, <a href="http://en.wikipedia.org/wiki/Java_Advanced_Imaging" target="_blank">JAI</a>, <a href="" target="_blank">ImageMagick</a>, <a href="http://gnuplot.info/" target="_blank">Gnuplot</a>, <a href="https://code.google.com/p/tesseract-ocr/" target="_blank">OCR (tesseract)</a></td>
                   </tr>
                   <tr>
                     <td>Graphics output</td>
