added links to ADAMS session

--- a/ernz2014.html
+++ b/ernz2014.html
@@ -69,14 +69,16 @@
       <h3>S.1.02 | 3.15pm - 5.30pm | Scientific workflow management with ADAMS</h3>
       <p>Workflow systems allow researchers to define and document complex data processing tasks and experiments using a graphical approach. In this session, ADAMS will be used for data mining, data processing and data visualization tasks. We will also show how workflows can be easily extended using R, Jython and Groovy.</p>
 
-      <h4>Software</h4>
+      <h4>Links</h4>
       <ul>
-        <li><a href="ernz2014/adams-base-all-0.4.6-bin.zip" target="_blank">ADAMS 0.4.6</a> (Windows/Linux)</li>
-        <li><a href="ernz2014/adams-base-all-0.4.6-app.zip" target="_blank">ADAMS 0.4.6</a> (Mac)</li>
+        <li><a href="ernz2014/adams-base-all-0.4.7-preview-bin.zip" target="_blank">ADAMS 0.4.7 (preview)</a> (Windows/Linux)</li>
+        <li><a href="ernz2014/adams-base-all-0.4.7-preview-app.zip" target="_blank">ADAMS 0.4.7 (preview)</a> (Mac)</li>
+        <li><a href="http://www.vision.caltech.edu/Image_Datasets/Caltech101/" target="_blank">101-ObjectCategories (original)</a></li>
+        <li><a href="ernz2014/data/101-2class.zip" target="_blank">101-ObjectCategories (2 classes)</a></li>
+        <li><a href="ernz2014/data/101-3class.zip" target="_blank">101-ObjectCategories (3 classes)</a></li>
+        <li><a href="ernz2014/data/nir.spc" target="_blank">NIR SPC file</a> [<a href="http://ftirsearch.com/default2.htm" target="_blank">original</a>]</li>
+        <li>Slides [<a href="ernz2014/ADAMS.pdf" target="_blank">pdf</a>, <a href="ernz2014/ADAMS.odp" target="_blank">odp</a>]</li>
       </ul>
-
-      <h4>Datasets</h4>
-      <p>Coming soon...</p>
 
       <div id="footer-simple">
       </div>
