better layout for links

--- a/ernz2014.html
+++ b/ernz2014.html
@@ -63,7 +63,12 @@
       <ul>
         <li><a href="http://www.cs.waikato.ac.nz/ml/weka/" target="_blank">WEKA homepage</a></li>
         <li><a href="http://www.cs.waikato.ac.nz/ml/weka/downloading.html" target="_blank">WEKA downloads</a></li>
-        <li>Slides [<a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.pdf" target="_blank">pdf</a>, <a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.ppt" target="_blank">ppt</a>]</li>
+        <li>Slides
+          <ul>
+            <li><a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.pdf" target="_blank">pdf</a></li>
+            <li><a href="http://www.cs.waikato.ac.nz/~eibe/WEKA_Ecosystem.ppt" target="_blank">ppt</a></li>
+          </ul>
+        </li>
       </ul>
 
       <h3>S.1.02 | 3.15pm - 5.30pm | Scientific workflow management with ADAMS</h3>
@@ -71,13 +76,31 @@
 
       <h4>Links</h4>
       <ul>
-        <li><a href="ernz2014/adams-base-all-0.4.7-preview-bin.zip" target="_blank">ADAMS 0.4.7 (preview)</a> (Windows/Linux)</li>
-        <li><a href="ernz2014/adams-base-all-0.4.7-preview-app.zip" target="_blank">ADAMS 0.4.7 (preview)</a> (Mac)</li>
-        <li><a href="http://www.vision.caltech.edu/Image_Datasets/Caltech101/" target="_blank">101-ObjectCategories (original)</a></li>
-        <li><a href="ernz2014/data/101-2class.zip" target="_blank">101-ObjectCategories (2 classes)</a></li>
-        <li><a href="ernz2014/data/101-3class.zip" target="_blank">101-ObjectCategories (3 classes)</a></li>
-        <li><a href="ernz2014/data/nir.spc" target="_blank">NIR SPC file</a> [<a href="http://ftirsearch.com/default2.htm" target="_blank">original</a>]</li>
-        <li>Slides [<a href="ernz2014/ADAMS.pdf" target="_blank">pdf</a>, <a href="ernz2014/ADAMS.odp" target="_blank">odp</a>]</li>
+        <li>ADAMS 0.4.7 (preview)
+          <ul>
+            <li><a href="ernz2014/adams-base-all-0.4.7-preview-bin.zip" target="_blank">Windows/Linux</a></li>
+            <li><a href="ernz2014/adams-base-all-0.4.7-preview-app.zip" target="_blank">Mac</a></li>
+          </ul>
+        </li>
+        <li>101 Object Categories
+          <ul>
+            <li><a href="http://www.vision.caltech.edu/Image_Datasets/Caltech101/" target="_blank">original</a></li>
+            <li><a href="ernz2014/data/101-2class.zip" target="_blank">2 classes</a></li>
+            <li><a href="ernz2014/data/101-3class.zip" target="_blank">3 classes</a></li>
+          </ul>
+        </li>
+        <li>NIR data (Bruker)
+          <ul>
+            <li><a href="ernz2014/data/nir.spc" target="_blank">NIR SPC file</a></li>
+            <li><a href="http://ftirsearch.com/default2.htm" target="_blank">original</a></li>
+          </ul>
+        </li>
+        <li>Slides
+          <ul>
+            <li><a href="ernz2014/ADAMS.pdf" target="_blank">pdf</a></li>
+            <li><a href="ernz2014/ADAMS.odp" target="_blank">odp</a></li>
+          </ul>
+        </li>
       </ul>
 
       <div id="footer-simple">
