moved ernz2014 into "events" dropdown

--- a/events/ernz2014.html
+++ b/events/ernz2014.html
@@ -12,13 +12,13 @@
     <title>ADAMS - The Advanced Data mining And Machine learning System</title>
 
     <!-- load jquery at start for imports -->
-    <script src="js/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/adams.css" rel="stylesheet">
+    <link href="/css/adams.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,10 +30,10 @@
   <body>
 
     <span id="gaimport"></span>
-    <script>$("#gaimport").load("ga.html");</script>
+    <script>$("#gaimport").load("/ga.html");</script>
 
     <span id="navbarimport"></span>
-    <script>$("#navbarimport").load("navbar.html");</script>
+    <script>$("#navbarimport").load("/navbar.html");</script>
 
     <div class="container">
       <div class="page-header">
@@ -105,14 +105,14 @@
 
       <div id="footer-simple">
       </div>
-      <script>$("#footer-simple").load("footer.html");</script>
+      <script>$("#footer-simple").load("/footer.html");</script>
     </div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   
 
 </body></html>
