--- a/events/ernz2014.html
+++ b/events/ernz2014.html
@@ -78,27 +78,27 @@
       <ul>
         <li>ADAMS 0.4.7 (preview)
           <ul>
-            <li><a href="ernz2014/adams-base-all-0.4.7-preview-bin.zip" target="_blank">Windows/Linux</a></li>
-            <li><a href="ernz2014/adams-base-all-0.4.7-preview-app.zip" target="_blank">Mac</a></li>
+            <li><a href="/events/ernz2014/adams-base-all-0.4.7-preview-bin.zip" target="_blank">Windows/Linux</a></li>
+            <li><a href="/events/ernz2014/adams-base-all-0.4.7-preview-app.zip" target="_blank">Mac</a></li>
           </ul>
         </li>
         <li>101 Object Categories
           <ul>
             <li><a href="http://www.vision.caltech.edu/Image_Datasets/Caltech101/" target="_blank">original</a></li>
-            <li><a href="ernz2014/data/101-2class.zip" target="_blank">2 classes</a></li>
-            <li><a href="ernz2014/data/101-3class.zip" target="_blank">3 classes</a></li>
+            <li><a href="/events/ernz2014/data/101-2class.zip" target="_blank">2 classes</a></li>
+            <li><a href="/events/ernz2014/data/101-3class.zip" target="_blank">3 classes</a></li>
           </ul>
         </li>
         <li>NIR data (Bruker)
           <ul>
-            <li><a href="ernz2014/data/nir.spc" target="_blank">NIR SPC file</a></li>
+            <li><a href="/events/ernz2014/data/nir.spc" target="_blank">NIR SPC file</a></li>
             <li><a href="http://ftirsearch.com/default2.htm" target="_blank">original</a></li>
           </ul>
         </li>
         <li>Slides
           <ul>
-            <li><a href="ernz2014/ADAMS.pdf" target="_blank">pdf</a></li>
-            <li><a href="ernz2014/ADAMS.odp" target="_blank">odp</a></li>
+            <li><a href="/events/ernz2014/ADAMS.pdf" target="_blank">pdf</a></li>
+            <li><a href="/events/ernz2014/ADAMS.odp" target="_blank">odp</a></li>
           </ul>
         </li>
       </ul>
