changed MOOC URL

--- a/events/ernz2014.html
+++ b/events/ernz2014.html
@@ -53,7 +53,7 @@
 
       <h4>Links</h4>
       <ul>
-        <li><a href="http://ernz2014-dm.waikato.ac.nz/" target="_blank">MOOC homepage</a></li>
+        <li><a href="https://weka.waikato.ac.nz/" target="_blank">MOOC homepage</a></li>
       </ul>
 
       <h3>S.1.02 | 1:00pm - 3:00pm | WEKA in the ecosystem for scientific computing</h3>
