--- a/navbar.html
+++ b/navbar.html
@@ -38,7 +38,7 @@
               <ul class="dropdown-menu">
                 <li><a href="dev_start.html">Get started</a></li>
                 <li><a href="/bugs/">Bugs</a></li>
-                <li><a href="/hudson/">Hudson</a></li>
+                <li><a href="/jenkins/">Jenkins</a></li>
                 <li><a href="/nexus/">Nexus</a></li>
                 <li><a href="dev_forum.html">Forum</a></li>
               </ul>
