--- a/release.html
+++ b/release.html
@@ -44,6 +44,34 @@
       <a href="http://sf.net/projects/theadamsflow/files/" target="_blank">Sourceforge.net</a>.</p>
 
       <div class="panel-group" id="accordion">
+        <!-- 0.4.7 -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapse-0-4-7">
+                0.4.7<small> - released 2014-12-24</small>
+              </a>
+            </h4>
+          </div>
+          <div id="collapse-0-4-7" class="panel-collapse collapse">
+            <div class="panel-body">
+              <ul>
+                <li><strong>base</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-base-all-0.4.7-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-base-all-0.4.7-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-base-all-0.4.7-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-base-all-0.4.7-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+                <li><strong>base + addons</strong>
+                  <ul>
+                    <li>Linux/Unix/Windows: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-addons-all-0.4.7-bin.zip/download" target="_blank">zip</a></li>
+                    <li>Mac OSX: <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-addons-all-0.4.7-app.zip/download" target="_blank">app</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-addons-all-0.4.7-doc.zip/download" target="_blank">doc</a>, <a href="http://sourceforge.net/projects/theadamsflow/files/0.4.7/adams-addons-all-0.4.7-flows.jar/download" target="_blank">flows</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
         <!-- 0.4.6 -->
         <div class="panel panel-default">
           <div class="panel-heading">
