--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                   </tr>
                   <tr>
                     <td>Graphics output</td>
-                    <td>BMP, JPG, PNG, TIF, PDF, RAW (<a href="http://www.cybercom.net/~dcoffin/dcraw/" target="_blank">dcraw</a>. <a href="http://ufraw.sourceforge.net/index.html" target="_blank">ufraw</a>)</td>
+                    <td>BMP, JPG, PNG, TIF, PDF, RAW (<a href="http://www.cybercom.net/~dcoffin/dcraw/" target="_blank">dcraw</a>, <a href="http://ufraw.sourceforge.net/index.html" target="_blank">ufraw</a>)</td>
                   </tr>
                   <tr>
                     <td>Visualization</td>
